Implementação da lista duplamente encadeada (falta ajustar métodos de exclusão)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /Lista/build/
 /ListaCircular/nbproject/private/
 /ListaCircular/build/
+/ListaDuplaEncadeada/nbproject/private/
+/ListaDuplaEncadeada/build/
