Implementação da pilha de solicitação e da fila de atendimento

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /ListaCircular/build/
 /ListaDuplaEncadeada/nbproject/private/
 /ListaDuplaEncadeada/build/
+/AvaliacaoRA1/nbproject/private/
+/AvaliacaoRA1/build/
